<resources>
    <string name="app_name">TestingAppKotlin</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="country">Country</string>
    <string name="apply">Apply</string>
    <string name="todo">TODO</string>
    <string name="default_web_client_id">6920206593-4on3fn12pe5j2sgoog9cr9trfnf87a6a.apps.googleusercontent.com</string>
    <string name="pakistanHistory">Pakistan, established in 1947 as a result of the partition of British India, has a complex history marked by political, social, and economic transformations. Initially comprising East and West Pakistan, the latter became an independent nation in 1971 following a war of independence in which Bangladesh emerged. Pakistan has experienced periods of military rule, interspersed with democratic governance. The nation played a crucial role in the Cold War as a U.S. ally during the Afghan-Soviet War in the 1980s. Over the years, Pakistan has faced regional tensions, notably with India, leading to several armed conflicts. The country has made strides in nuclear technology, conducting nuclear tests in 1998.</string>
    <string-array name="planets_array">
        <item>Select Planet</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_drawer_navigation">DrawerNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>